--- a/client/src/Components/Table/index.scss
+++ b/client/src/Components/Table/index.scss
@@ -1,5 +1,38 @@
 .ab-tests-list {
+  width: 100%;
   list-style: none;
   display: flex;
   flex-direction: column;
+}
+
+.ab-test__name-header {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 2rem;
+  text-transform: uppercase;
+}
+
+.util-upper-case {
+  text-transform: uppercase;
+  color: #999999;
+  font-weight: 500;
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.dashboard-container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.no-items {
+  font-size: 1.8rem;
+  margin-top: 14.9rem;
+  margin-bottom: 3.7rem;
 }
